<?xml version="1.0"?>
<package>
  <name>vigir_ocs_hotkey_manager</name>
  <version>0.0.1</version>
  <description>The vigir_ocs_hotkey_manager</description>
  <maintainer email="bwright5@vt.edu">Brian Wright</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend> 
  <build_depend>flor_ocs_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>  
  <run_depend>flor_ocs_msgs</run_depend>
  
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
