<?xml version="1.0"?>
<package>
  <name>vigir_ocs_image_nodelet</name>
  <version>0.1.0</version>
  <description>The OCS image nodelet package</description>
  <maintainer email="fbacim@vt.edu">Felipe Bacim</maintainer>
  <license>TORC</license>
  <author email="fbacim@vt.edu">Felipe Bacim</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>flor_ocs_msgs</build_depend>
  <build_depend>flor_grasp_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>flor_ocs_msgs</run_depend>
  <run_depend>flor_grasp_msgs</run_depend>
  <run_depend>nodelet</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
	<nodelet plugin="${prefix}/vigir_image_nodelet.xml" />
  </export>
</package>
